samples/_failures_safe/1761513538_e91360_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f321cfd2.c: In function ‘main’:
./samples/SAFE/__tmp_f321cfd2.c:145:30: error: missing terminating " character
  145 |         int rows2 = read_int("Enter rows for matrix B (1
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f321cfd2.c:145:9: error: expected expression at end of input
  145 |         int rows2 = read_int("Enter rows for matrix B (1
      |         ^~~
./samples/SAFE/__tmp_f321cfd2.c:145:21: error: too few arguments to function ‘read_int’
  145 |         int rows2 = read_int("Enter rows for matrix B (1
      |                     ^~~~~~~~
./samples/SAFE/__tmp_f321cfd2.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_f321cfd2.c:145:9: error: expected declaration or statement at end of input
  145 |         int rows2 = read_int("Enter rows for matrix B (1
      |         ^~~
./samples/SAFE/__tmp_f321cfd2.c:145:9: error: expected declaration or statement at end of input
